--- a/package.json
+++ b/package.json
@@ -4,7 +4,30 @@
   "description": "Valere Margins - Node.js Backend Developer Assessment",
   "main": "index.js",
   "scripts": {
+    "dev": "npx ts-node-dev ./src/index.ts"
   },
   "author": "Domagoj Petreković",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "joi": "^17.7.0",
+    "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.8.0",
+    "pg": "^8.6.0",
+    "typeorm": "^0.3.11"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/node": "^15.12.2",
+    "@types/nodemailer": "^6.4.6",
+    "@types/pg": "^7.14.11",
+    "@types/validator": "^13.7.10",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.2.4"
+  }
 }
