--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "http-status": "^1.5.3",
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.8.0",
