--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "http-status": "^1.5.3",
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "nodemailer": "^6.8.0",
+    "passport": "^0.6.0",
     "pg": "^8.6.0",
     "typeorm": "^0.3.11"
   },
@@ -24,8 +26,10 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/moment": "^2.13.0",
     "@types/node": "^15.12.2",
     "@types/nodemailer": "^6.4.6",
+    "@types/passport": "^1.0.11",
     "@types/pg": "^7.14.11",
     "@types/validator": "^13.7.10",
     "ts-node-dev": "^2.0.0",
