--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
       "experimentalDecorators": true,
       "emitDecoratorMetadata": true,
       "rootDir": ".",
-      "typeRoots": ["src/@types", "node_modules/@types"]
+      "typeRoots": ["src/types", "node_modules/@types"]
     },
     "include": ["src/**/*.ts"],
     "exclude": ["node_modules"]
