--- a/package.json
+++ b/package.json
@@ -34,5 +34,25 @@
     "@types/validator": "^13.7.10",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.2.4"
+  },
+  "prettier": {
+    "$schema": "http://json.schemastore.org/prettierrc",
+    "endOfLine": "lf",
+    "printWidth": 100,
+    "quoteProps": "as-needed",
+    "semi": true,
+    "singleQuote": true,
+    "tabWidth": 4,
+    "trailingComma": "none",
+    "useTabs": true,
+    "overrides": [
+      {
+        "files": "*.yml",
+        "options": {
+          "tabWidth": 2,
+          "useTabs": false
+        }
+      }
+    ]
   }
 }
