--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
     "pg": "^8.6.0",
+    "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.11"
   },
   "devDependencies": {
