--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
       "strictNullChecks": true,
       "experimentalDecorators": true,
       "emitDecoratorMetadata": true,
+      "isolatedModules": true,
       "rootDir": ".",
       "typeRoots": ["src/types", "node_modules/@types"]
     },
