--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,21 +17,20 @@ services:
     command: npx ts-node ./src/index.ts
 
     environment:
-      - DB_USERNAME=${DB_USERNAME}
+      - DB_USERNAME=${DB_USERNAME-api}
       - DB_HOST=postgres #has to be like that, if you change this you also need to change name of database service on line 31 from postgres to what ever you put here
-      - DB_DATABASE=${DB_DATABASE}
-      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_DATABASE=${DB_DATABASE-api}
+      - DB_PASSWORD=${DB_PASSWORD-api}
       - DB_PORT=5432
-      - DB_LOGGING=${DB_LOGGING}
-      - DB_SYNCHRONISE=${DB_SYNCHRONISE}
-      - DB_DROP_TABLES_ON_SYNC=${DB_DROP_TABLES_ON_SYNC}
-      - DB_SEED=${DB_SEED}
-      - DB_TYPE=${DB_TYPE}
-      - API_PORT=${API_PORT}
-      - TOKEN_KEY=${TOKEN_KEY}
-      - EMAIL_FROM=${EMAIL_FROM}
-      - MAIL_SERVICE_USERNAME=${MAIL_SERVICE_USERNAME}
-      - MAIL_SERVICE_PASSWORD=${MAIL_SERVICE_PASSWORD}
+      - DB_LOGGING=${DB_LOGGING-false}
+      - DB_SYNCHRONISE=${DB_SYNCHRONISE-true}
+      - DB_DROP_TABLES_ON_SYNC=${DB_DROP_TABLES_ON_SYNC-true}
+      - DB_SEED=${DB_SEED-true}
+      - DB_TYPE=${DB_TYPE-postgres}
+      - API_PORT=${API_PORT-5000}
+      - TOKEN_KEY=${TOKEN_KEY-test_key}
+      - MAIL_SERVICE_USERNAME=${MAIL_SERVICE_USERNAME-test}
+      - MAIL_SERVICE_PASSWORD=${MAIL_SERVICE_PASSWORD-test}
 
   postgres:
     image: postgres:15
@@ -41,8 +40,8 @@ services:
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_DB=${DB_DATABASE}
     ports:
-      - "10000:5432"
+      - "5432:5432"
     expose:
-      - 10000
+      - 5432
 
  
